--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,5 @@
 applications:
-- name: springeureka  
-path: target/netfix-eureka-naming-server-0.0.1-SNAPSHOT.jar
-buildpack: https://github.com/cloudfoundry/java-buildpack.git
+- name: spring-eureka-withoutjenkin  
+  path: target/netfix-eureka-naming-server-0.0.1-SNAPSHOT.jar
+  domain: cfapps.io
+  host: eureka-test-service
